--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 PORT=8080
+MONGODB_CNN=mongodb+srv://user_cafe:GJoSbLzXdAacdDMz@clustercafe.qsjbxnz.mongodb.net/cafeDB
+
+PASS=GJoSbLzXdAacdDMz
+USER=user_cafe
