--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-#PORT=8080
+PORT=8080
 MONGODB_CNN=mongodb+srv://user_cafe:GJoSbLzXdAacdDMz@clustercafe.qsjbxnz.mongodb.net/cafeDB
+SECRETORPRIVATEKEY=Est03sMyPubli1cK3y1607
